Changes to be committed: 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.html 	modified:   src/app/models/transaction.model.ts 	modified:   src/app/pages/dashboard/dashboard.page.ts 	new file:   src/app/pages/expense/expense-routing.module.ts 	new file:   src/app/pages/expense/expense.module.ts 	new file:   src/app/pages/expense/expense.page.html 	new file:   src/app/pages/expense/expense.page.scss 	new file:   src/app/pages/expense/expense.page.spec.ts 	new file:   src/app/pages/expense/expense.page.ts 	new file:   src/app/pages/income/income-routing.module.ts 	new file:   src/app/pages/income/income.module.ts 	new file:   src/app/pages/income/income.page.html 	new file:   src/app/pages/income/income.page.scss 	new file:   src/app/pages/income/income.page.spec.ts 	new file:   src/app/pages/income/income.page.ts 	modified:   src/app/pages/transactions/transactions.page.html 	modified:   src/app/pages/transactions/transactions.page.ts 	modified:   src/app/services/transaction.service.ts

--- a/src/app/pages/transactions/transactions.page.html
+++ b/src/app/pages/transactions/transactions.page.html
@@ -1,19 +1,30 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button> 
+    </ion-buttons>
     <ion-title>Transactions</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list *ngIf="hasTransactions; else noTransactionsTemplate">
     <ion-item *ngFor="let transaction of transactions | async">
       <ion-label>
         <h2>{{ transaction.payee }}</h2>
         <p>Amount: {{ transaction.amount | currency }}</p>
-        <p>Date: {{ transaction.date.toDate() | date:'mediumDate' }}</p>
+        <p>Date: {{ transaction.date?.toDate() | date:'mediumDate' }}</p>
         <p>Category: {{ transaction.category }}</p>
         <p>Description: {{ transaction.description }}</p>
       </ion-label>
     </ion-item>
   </ion-list>
+
+  <ng-template #noTransactionsTemplate>
+    <ion-item>
+      <ion-label class="ion-text-center">
+        No transactions to display. Please add transactions.
+      </ion-label>
+    </ion-item>
+  </ng-template>
 </ion-content>
