--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,15 @@
           <ion-icon name="list" slot="start"></ion-icon>
           <ion-label>Transactions</ion-label>
         </ion-item>
+        <!-- Sub-items for transactions -->
+        <ion-item routerLink="/income" style="margin-left: 20px;">
+          <ion-icon name="trending-up" slot="start"></ion-icon>
+          <ion-label>Income</ion-label>
+        </ion-item>
+        <ion-item routerLink="/expense" style="margin-left: 20px;">
+          <ion-icon name="trending-down" slot="start"></ion-icon>
+          <ion-label>Expense</ion-label>
+        </ion-item>
         <ion-item routerLink="/settings">
           <ion-icon name="settings" slot="start"></ion-icon>
           <ion-label>Settings</ion-label>
