Changes to be committed: 	modified:   src/app/pages/income/income.page.html 	modified:   src/app/pages/income/income.page.ts 	new file:   src/app/services/auth.service.spec.ts 	new file:   src/app/services/auth.service.ts 	modified:   src/app/services/transaction.service.ts

--- a/src/app/pages/income/income.page.html
+++ b/src/app/pages/income/income.page.html
@@ -41,7 +41,7 @@
       <ion-item>
         <ion-label>Category</ion-label>
         <ion-select name="category" ngModel placeholder="Select One">
-          <ion-select-option *ngFor="let category of categories" [value]="category">
+          <ion-select-option *ngFor="let category of categories" [value]="category.name">
             {{ category.name }}
           </ion-select-option>
         </ion-select>
