--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -24,24 +24,56 @@
   </ion-item>
 
   <div *ngIf="hasData; else noDataTemplate">
+     <!-- Current totals -->
     <ion-item>
-      <ion-label>Total Income:
+      <ion-label>Current Total Income:
         <ion-badge color="success">{{ incomeTotal | async | currency }}</ion-badge>
       </ion-label>
     </ion-item>
 
     <ion-item>
-      <ion-label>Total Expenses:
+      <ion-label>Current Total Expenses:
         <ion-badge color="danger">{{ expenseTotal | async | currency }}</ion-badge>
       </ion-label>
     </ion-item>
     
     <ion-item>
-      <ion-label>Net Total:
+      <ion-label>Current Net Total:
         <ion-badge color="primary">{{ netTotal | async | currency }}</ion-badge>
       </ion-label>
     </ion-item>
-  </div>
+
+  <!-- Projected financials -->
+  <ion-item>
+    <ion-label>Projected Income This Month:
+      <ion-badge color="success">{{ projectedIncome | async | currency }}</ion-badge>
+    </ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Expected Recurring Income:
+      <ion-badge color="secondary">{{ pendingRecurringIncome | async | currency }}</ion-badge>
+    </ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Projected Expenses This Month:
+      <ion-badge color="danger">{{ projectedExpense | async | currency }}</ion-badge>
+    </ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Expected Recurring Expense:
+      <ion-badge color="warning">{{ pendingRecurringExpense | async | currency }}</ion-badge>
+    </ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Projected Net Balance This Month:
+      <ion-badge color="primary">{{ projectedNetTotal | async | currency }}</ion-badge>
+    </ion-label>
+  </ion-item>
+</div>
 
   <ng-template #noDataTemplate>
     <ion-item>
