--- a/src/app/pages/transactions/transactions.page.html
+++ b/src/app/pages/transactions/transactions.page.html
@@ -18,7 +18,13 @@
     </ion-button>
   </ion-item>
  
-  <ion-grid *ngIf="hasTransactions; else noTransactionsTemplate">
+   <!-- Table for Submitted Transactions -->
+   <ion-grid *ngIf="submittedTransactions.length > 0; else noTransactionsTemplate">
+    <ion-row>
+      <ion-col colspan="6">
+        <h2>Submitted Transactions</h2>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col>Date</ion-col>
       <ion-col>Type</ion-col>
@@ -27,7 +33,7 @@
       <ion-col>Category</ion-col>
       <ion-col>Amount</ion-col>
     </ion-row>
-    <ion-row *ngFor="let transaction of transactions | async">
+    <ion-row *ngFor="let transaction of submittedTransactions">
       <ion-col>{{ transaction.date.toDate() | date:'mediumDate' }}</ion-col>
       <ion-col>{{ transaction.type }}</ion-col>
       <ion-col>{{ transaction.payee }}</ion-col>
@@ -37,14 +43,108 @@
     </ion-row>
   </ion-grid>
 
+  <!-- Table for Upcoming Recurring Transactions -->
+  <ion-grid *ngIf="upcomingRecurringTransactions.length > 0">
+    <ion-row>
+      <ion-col colspan="7">
+        <h2>Upcoming Recurring Transactions</h2>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>Next Due Date</ion-col>
+      <ion-col>Type</ion-col>
+      <ion-col>Payee</ion-col>
+      <ion-col>Description</ion-col>
+      <ion-col>Category</ion-col>
+      <ion-col>Amount</ion-col>
+      <ion-col>Action</ion-col>
+    </ion-row>
+    <ion-row *ngFor="let transaction of upcomingRecurringTransactions">
+      <ion-col>{{ transaction.nextDueDate?.toDate() | date:'mediumDate' }}</ion-col>
+      <ion-col>{{ transaction.type }}</ion-col>
+      <ion-col>{{ transaction.payee }}</ion-col>
+      <ion-col>{{ transaction.description }}</ion-col>
+      <ion-col>{{ transaction.category }}</ion-col>
+      <ion-col>{{ transaction.amount | currency }}</ion-col>
+      <ion-col>
+        <ion-button (click)="logTransactionIdAndResubmit(transaction.id)">Resubmit</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
   <ng-template #noTransactionsTemplate>
     <ion-item>
-      <ion-label class="ion-text-center">
-        No transactions to display.
-      </ion-label>
+      <ion-label class="ion-text-center">No transactions to display</ion-label>
     </ion-item>
   </ng-template>
-</ion-content>
+
+  <!-- Button to show form -->
+<ion-button expand="block" *ngIf="!showAddForm" (click)="showAddForm = true">Add Transaction</ion-button>
+
+<!-- Transaction form, shown when showAddForm is true -->
+<div *ngIf="showAddForm">
+  <form #transactionForm="ngForm" (ngSubmit)="addTransaction(transactionForm.value); showAddForm = false;">
+    <ion-item>
+      <ion-label>Transaction Type</ion-label>
+      <ion-select name="type" ngModel required>
+        <ion-select-option value="income">Income</ion-select-option>
+        <ion-select-option value="expense">Expense</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Amount</ion-label>
+      <ion-input type="number" name="amount" ngModel required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Date</ion-label>
+      <ion-datetime
+        presentation="date"
+        display-format="MMM DD, YYYY"
+        picker-format="MMM DD YYYY"
+        name="date"
+        ngModel
+        required>
+      </ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-label>Category</ion-label>
+      <ion-select name="category" ngModel placeholder="Select One">
+        <ion-select-option *ngFor="let category of categories" [value]="category.name">
+          {{ category.name }}
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Description</ion-label>
+      <ion-textarea name="description" ngModel></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Payee</ion-label>
+      <ion-input type="text" name="payee" ngModel required></ion-input>
+    </ion-item>
+    <!-- Recurrence Selection -->
+    <ion-item>
+      <ion-label>Recurrence</ion-label>
+      <ion-select placeholder="Select One" name="recurrence" ngModel>
+        <ion-select-option value="none">None</ion-select-option>
+        <ion-select-option value="weekly">Weekly</ion-select-option>
+        <ion-select-option value="biweekly">Bi-Weekly</ion-select-option>
+        <ion-select-option value="monthly">Monthly</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <!-- Next Due Date Selection -->
+    <ion-item>
+      <ion-label>Next Due Date</ion-label>
+      <ion-datetime display-format="MMM DD, YYYY" picker-format="MMM DD YYYY" name="nextDueDate" ngModel></ion-datetime>
+    </ion-item>
+
+    <ion-button type="submit" expand="block">Submit</ion-button>
+    <!-- Optionally add a cancel button to hide form -->
+    <ion-button expand="block" (click)="showAddForm = false">Cancel</ion-button>
+  </form>
+</div>
+
 
 <!-- Modal for date-time selection -->
 <ion-modal [keepContentsMounted]="true" [isOpen]="showCalendar" (didDismiss)="cancelCalendar()">
