Changes to be committed: 	modified:   .eslintrc.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app.component.ts 	modified:   src/app/app.module.ts 	modified:   src/app/guards/auth.guard.ts 	modified:   src/app/pages/dashboard/dashboard.page.html 	modified:   src/app/pages/dashboard/dashboard.page.ts 	modified:   src/app/pages/expense/expense.page.ts 	modified:   src/app/pages/income/income.page.ts 	modified:   src/app/pages/settings/settings.page.html 	modified:   src/app/pages/settings/settings.page.ts 	modified:   src/app/pages/transactions/transactions.page.ts 	new file:   src/app/services/settings.service.spec.ts 	new file:   src/app/services/settings.service.ts 	modified:   src/app/services/transaction.service.ts

--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -11,7 +11,12 @@
   <ion-list>
     <ion-item>
       <ion-label>Dark Mode</ion-label>
-      <ion-toggle checked="{{darkModeEnabled}}" (ionChange)="toggleDarkMode()"></ion-toggle>
+      <ion-toggle checked="{{darkModeEnabled}}" (ionChange)="toggleDarkMode($event)"></ion-toggle>
+    </ion-item>
+    <ion-item>
+      <ion-label>Toggle Cumulative View</ion-label>
+      <ion-toggle checked="{{cumulativeViewEnabled}}" (ionChange)="toggleCumulativeView($event)"></ion-toggle>
     </ion-item>
   </ion-list>
 </ion-content>
+
