On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   src/app/pages/dashboard/dashboard.page.html

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -26,11 +26,12 @@
     
     <div *ngIf="toggleCumulative">
       <ion-item>
-        <ion-label>Current Balance:
-        <ion-badge color="primary">{{ cumulativeBalance | currency }}</ion-badge>
-      </ion-label>
+        <ion-label>{{ isCurrentMonth ? 'Current Balance:' : 'Month-end Balance:' }}
+          <ion-badge color="primary">{{ cumulativeBalance | currency }}</ion-badge>
+        </ion-label>
       </ion-item>
     </div>
+    
 
     <!-- Income total label changes based on month context -->
     <ion-item>
